tests/security/taintedInputFromGetArray/output.txt
ERROR: TaintedData - input.hack:7:6 - Detected tainted HTML tags